--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/c88328fc35.js" crossorigin="anonymous"></script>
     <meta name="description" content="Mohammed Shajin's : Portfolio">
     <meta name="author" content="Mohammed Shajin">
-    <!-- Sample Test-->
+    <link rel="canonical" href="https://www.mohammedshajin.com" />
     <!-- Favicons
     ================================================== -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
