--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="overlay">
             <div class="content">
                 <h1>hi <strong><span class="color">I'm Mohammed Shajin</span></strong></h1>
-                <p class="lead"><strong>Entrepreneur</strong> and <strong>Creative director</strong></p>
+                <p class="lead"><strong>Entrepreneur</strong> and <strong>Web Developer</strong></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll"></a>
             </div>
         </div>
