--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                             <a href="#">
                                 <div class="hover-text">
                                     <h4>UI/UX Design</h4>
-                                    <small>Branding</small>
+                                    <small>Ui/Ux</small>
                                     <div class="clearfix"></div>
                                     <i class="fa fa-plus"></i>
                                 </div>
@@ -251,7 +251,7 @@
                             <a href="#">
                                 <div class="hover-text">
                                     <h4>UI/UX Design</h4>
-                                    <small>Branding</small>
+                                    <small>Ui/Ux</small>
                                     <div class="clearfix"></div>
                                     <i class="fa fa-plus"></i>
                                 </div>
