--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="overlay">
             <div class="content">
                 <h1>hi <strong><span class="color">I'm Mohammed Shajin</span></strong></h1>
-                <p class="lead"><strong>Entrepreneur</strong> and <strong>Creative Director</strong></p>
+                <p class="lead"><strong>Co-founder</strong> and <strong>CEO</strong> of <strong>Whalesin</strong> & <strong>Wisehours</strong></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll"></a>
             </div>
         </div>
