fixed link add new portfolio

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             <div class="social-links">
                 <a href="https://github.com/mhdshjn" target="_blank"><i class="fa fa-github"></i></a>
                 
-                <a href="https://www.linkedin.com/in/mohd-shajin/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/mohammed-shajin/" target="_blank"><i class="fa fa-linkedin"></i></a>
                 <a href="https://www.behance.net/mohdshjn/" target="_blank"><i class="fa fa-behance"></i></a>
                 <a href="https://dribbble.com/mohdshjn" target="_blank"><i class="fa fa-dribbble"></i></a>
                 <a href="https://www.facebook.com/mhdshjn" target="_blank"><i class="fa fa-facebook-square"></i></a>
