--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="img/mohammedshajin.jpg" alt="mohammed shajin" class="img-responsive">
+                    <img src="img/mohammedshajin.jpg" alt="Mohammed Shajin" class="img-responsive">
                 </div>
                 <div class="col-md-6">
                     <div class="about-text">
