--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                 <a href="https://www.linkedin.com/in/mohammed-shajin/" target="_blank"><i class="fa fa-linkedin"></i></a>
                 <a href="https://www.behance.net/mohammedshajin/" target="_blank"><i class="fa fa-behance"></i></a>
                 <a href="https://dribbble.com/mohammedshajin" target="_blank"><i class="fa fa-dribbble"></i></a>
-                <a href="https://www.facebook.com/mohammedshajin" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                <a href="https://www.facebook.com/mohammedshajinp" target="_blank"><i class="fa fa-facebook-square"></i></a>
                 <a href="https://twitter.com/mohammedshajinp" target="_blank"><i class="fa fa-twitter"></i></a>
                 <a href="https://instagram.com/mohd_shjn" target="_blank"><i class="fa fa-instagram"></i></a>
             </div> <!-- .social-links -->
